# cusub2.1

./: .gitignore  .gitmodules  .pololutest.py.swo  .pololutest.py.swp  .readthedocs.yaml  README.md  date.sh  gitTest.txt  gitmodules.txt  joyListener.py  maestrotest  motorController.py  pololutest.py  test.py  test4.py  test5.py  test6.cpp  testMC.py
cusub2_teleop/: README.md  joyListener.py  motorController.py  test5.py  testMC.py
cusub_control/src/: PIDcontroller.py
docs/: Camera.md  Intro_and_onboarding.md  Maestro.md  README.md  Teleoperation.md  conf.py  dvl_data.md  helpfulLinks.md  index.rst  maestro.md  requirements.txt
docs/_build/doctrees/: README.doctree  Teleoperation.doctree  environment.pickle  index.doctree  maestro.doctree  test.doctree
docs/_build/html/: .buildinfo  README.html  Teleoperation.html  genindex.html  index.html  maestro.html  objects.inv  search.html  searchindex.js  test.html
install/: local_setup.sh  setup.sh
install/chimera_camera/share/chimera_camera/: package.bash  package.ps1  package.sh  package.xml
log/: latest_build
src/bt_trees/: CMakeLists.txt  package.xml
src/camera/: package.xml  setup.py
src/cfg/: requirements.txt  sub_properties.yaml
src/chimera_camera/: package.xml  package_takeaways.md  setup.cfg  setup.py
src/custom_interfaces/: CMakeLists.txt  package.xml
src/dvl_data/: package.xml  readme.md  setup.cfg  setup.py
src/motor_control/: package.xml  setup.py
src/teleoperation/: package.xml  setup.py  submodule_nesting.md
taskScripts/: setPWM.py
taskScripts/Photogrammetry/: takePics.py
(+63 files in other folders)
