<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chimera_camera</name>
  <version>0.0.0</version>
  <description>Package to get camera data from Chimera</description>
  
  <!-- Maintainer information -->
  <maintainer email="tuckerjake11@gmail.com">jaketucker</maintainer>
  
  <!-- License declaration -->
  <license>Apache-2.0</license>

  <!-- ROS dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Export section -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
